# CircuitPython_PS2Controller

./: README.rst  ps2controller.py  pyproject.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  ps2controller_wiring.png.license
examples/: ps2controller_datadump.py  ps2controller_digital_only.py  ps2controller_simpletest.py  ps2controller_usbkeys.py
